# THJCC-CTF-2026

./: README.md
AI/Deep Inverse/: README.md  script.py
AI/NEURAL_OVERRIDE/: README.md
AI/Steal My model/: README.md  solve.py
Crypto/0login/: README.md
Crypto/676767/: README.md  solve.py
Crypto/Betterfly/: README.md  script.py
Crypto/Duck/: README.md  cookie.txt  script.py  secret.txt  solve.phtml
Crypto/Sage/: README.md
Crypto/bit by bit/: README.md  chal.py  output.txt  script.py
Crypto/shifting/: README.md
Forensics/ExBaby Shark Master/: README.md
Forensics/I use arch btw/: README.md
Forensics/Ransomware/: README.md
Forensics/TV/: README.md
Misc/Image/: README.md  script.py
Misc/Lock/: README.md
Misc/Metro/: README.md
Misc/Provisioning in Progress/: README.md
Misc/YRSK/: README.md
Misc/baby jail/: README.md
Misc/kinezi/: README.md  script.py
Pwn/ASCII Driver/: README.md
Pwn/Baby PHP/: README.md  exploit.py
Pwn/Farm/: README.md
Pwn/Happy Cat Jail/: README.md  THJCC_Happy-Cat-Jail.go  script.py
Pwn/Login as Admin/: README.md  script.py
Web/msgboard/: Dockerfile  README.md  add_user.py  app.py  docker-compose.yml  little_conponment.py  pyproject.toml  spam_classifier.joblib  vectorizer.joblib
Web/msgboard/templates/: login.html  message_board.html  mod_posts.html  mod_replys.html  moderation.html  policy.html  post_anonymous.html  redirect.html  reg.html  replys.html  root.html  unsafe_site_redirect.html
Web/msgboard/thjccanon/: api.py  frontend.py  moderation.py  opengraph.py  redirect_page.py  static_files.py
(+67 files in other folders)
