[project]
name = "thjcc-anon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "click>=8.3.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-limiter>=4.0.0",
    "flask-mail>=0.10.0",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "joblib>=1.5.2",
    "markdown>=3.10",
    "markupsafe>=3.0.3",
    "pillow>=12.0.0",
    "pymongo>=4.15.4",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "werkzeug>=3.1.4",
]
